--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "proxy":"https://napsuiserver.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -32,6 +33,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+   "engines": {
+    "node": "^16.14.0"
   },
   "browserslist": {
     "production": [
