--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy":"https://napsuiserver.herokuapp.com",
+  "proxy": "napsuiserver.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -34,7 +34,7 @@
       "react-app/jest"
     ]
   },
-   "engines": {
+  "engines": {
     "node": "^16.14.0"
   },
   "browserslist": {
