--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "napsuiserver.herokuapp.com",
+  "proxy": "https://napsuiserver.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
