--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.1101.0",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "framer-motion": "^6.2.8",
     "http-proxy-middleware": "^2.0.4",
@@ -17,6 +18,7 @@
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-image-file-resizer": "^0.4.8",
     "react-lazy-load-image-component": "^1.5.5",
     "react-paystack": "^4.0.1",
