--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "emoji-picker-react": "^4.4.7",
     "express": "^4.17.3",
     "framer-motion": "^6.2.8",
     "http-proxy-middleware": "^2.0.4",
@@ -19,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.7.1",
     "react-image-file-resizer": "^0.4.8",
     "react-lazy-load-image-component": "^1.5.5",
     "react-paystack": "^4.0.1",
