--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1101.0",
+    "axios": "^1.3.4",
     "body-parser": "^1.19.2",
+    "chatgpt": "^5.0.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
@@ -17,6 +19,7 @@
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
     "nodemon": "^2.0.15",
+    "openai": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
